--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <!-- Me da mucha pena que no tenga una devolucion de alguien, que deba estar escribiendo en los comentarios para ver si realmente lo leen....y que cada vez que me quise comunicar me delvolvieron con respuestas automaticas. Se ve que el equivocado sere yo y las cosas se manejan de manera distintas en estas epocas. Como les comente en el chat automatico tengo 42 años, padre de familia y uno elige este modo de aprendizaje porque en el hueco en que podemos nos ponemos. Lo tendre en cuenta para futuras elecciones... El trabajo lo hice con mucho esfuerzo y dedicacion, no se realmente que estan esperando porque no explican tampoco cual es el error, solo mandan un pdf generico que no es de gran ayuda... Y si un tutor te da una devolucion minimamente uno tendria que poder hablar con dicha persona para que le explicara el porque de sus dichos o minimamente explicar lo que uno hizo...ademas de tener que estar en el transcurso del recorrido, y no mandar a ver unos videos (los cual vi) como hicieron en varias oportunidades. Si realmente estuviera copiado de internet (como mencionan en la devolucion) tendria que andar a la perfeccion lo cual no creo que el mio este tan perfecto y si por querer hacerlo en ingles, ya que estoy estudiando el mismo, para poder emprender en este mundo de la programacion que mejor que hacerlo de esa manera... No tengo tiempo para volver a rehacerlo, ya surgiran mejores oportunidades y el tiempo que he dedicado es tiempo invertido en aprendizaje en estos temas. Si les parece que esta tan pesimo como dijeron en la devolucion quisiera que sean especificos y realmente le dediquen TIEMPO a la correcion y yo poder aprender de mis errores que es la mejor manera de aprender y espero no tener otra respuesta automatica o ninguna en este caso.
+    Saludos  -->
+    
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
